[package]
name = "simple_color_log"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple color log library for Rust"
readme = "README.md"
repository = "https://github.com/goldensansapple/simple_color_log"

[features]
default = ["info"]
error = []
warn = ["error"]
info = ["warn"]
debug = ["info"]
trace = ["debug"]

[dependencies]
time = { version = "0", features = ["std", "formatting"] }
